{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 41,
  "lineage": "fcbd9bc3-1beb-15d5-e3ee-eb7c254d4114",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec10929233384c7f",
            "arn": "arn:aws:ec2:us-east-1:228494578171:instance/i-003748928783d0cf9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-003748928783d0cf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "chave-site-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02abcb324c3917860"
              }
            ],
            "primary_network_interface_id": "eni-02abcb324c3917860",
            "private_dns": "ip-172-31-40-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.175",
            "public_dns": "ec2-54-157-24-97.compute-1.amazonaws.com",
            "public_ip": "54.157.24.97",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06ed50066f44abd7d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "website-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3d0118791b09434",
            "tags": {
              "Name": "TechMusic_hml",
              "Provisioned": "Terraform"
            },
            "tags_all": {
              "Name": "TechMusic_hml",
              "Provisioned": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0efd331c1e8dd9698"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "i-003748928783d0cf9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "website-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group/sg-0efd331c1e8dd9698",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0efd331c1e8dd9698",
            "ingress": [],
            "name": "website-sg",
            "name_prefix": "",
            "owner_id": "228494578171",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "website_sg",
              "Provisioned": "Terraform"
            },
            "tags_all": {
              "Name": "website_sg",
              "Provisioned": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3fd304aa897f578"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sg-0efd331c1e8dd9698",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-041c6128b1f8c95f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041c6128b1f8c95f8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-041c6128b1f8c95f8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-041c6128b1f8c95f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-0e77d2c231cbc5a31",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e77d2c231cbc5a31",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-0e77d2c231cbc5a31",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-0e77d2c231cbc5a31",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-0b4dc95ba3b3da91a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0b4dc95ba3b3da91a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-0b4dc95ba3b3da91a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-0b4dc95ba3b3da91a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-0b65671672d654689",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b65671672d654689",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-0b65671672d654689",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-0b65671672d654689",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-0bfaae131aa3e2ae5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3333,
            "id": "sgr-0bfaae131aa3e2ae5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-0bfaae131aa3e2ae5",
            "tags": null,
            "tags_all": {},
            "to_port": 3333
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-0bfaae131aa3e2ae5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tcp_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228494578171:security-group-rule/sgr-097e5d8c45fe676d6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3307,
            "id": "sgr-097e5d8c45fe676d6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0efd331c1e8dd9698",
            "security_group_rule_id": "sgr-097e5d8c45fe676d6",
            "tags": null,
            "tags_all": {},
            "to_port": 3307
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "228494578171",
            "id": "sgr-097e5d8c45fe676d6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.website-sg"
          ]
        }
      ]
    }
  ]
}